# Tealscan

./: .gitignore  .gitignore.old  .replit  package-lock.json  package.json  pyproject.toml  replit.md  start.sh
attached_assets/: Pasted--PAGE-1-CAMSCASWS-271125222347-Version-V3-4-Live-1016-C_1764696601029.txt  Pasted-01-06-38-376-Running-build-in-Washington-D-C-USA-East-iad1-01-06-38-377-Build-machine-configu-1764531488572_1764531488573.txt  Pasted-Build-a-comprehensive-Fintech-SaaS-application-called-TealScan-It-is-a-Mutual-Fund-X-Ray-tool-tha-1764348328411_1764348328412.txt  Pasted-Great-question-Given-your-app-name-is-TealScan-you-shou_1764783001270.txt  Pasted-I-m-still-seeing-the-exact-same-original-content-The-changes-are-definitely-not-showing-up-yet-Let-1764495839463_1764495839463.txt  Pasted-I-need-to-completely-refactor-this-application-to-make-it-secure-trustable-and-legally-compliant-f-1764483133763_1764483133764.txt  Pasted-I-need-to-upgrade-this-web-app-to-a-v2-0-professional-product-level-inspired-by-the-clean-aesthetic-1764484802927_1764484802927.txt  Pasted-I-need-you-to-transform-my-portfolio-analyzer-web-app-into-a-comprehensive-best-in-class-platform--1764494168520_1764494168520.txt  Pasted-OK-done-Now-in-vercel-I-see-this-error-00-56-34-654-Running-build-in-Washington-D-C-USA-Ea-1764531168071_1764531168071.txt  Pasted-Perfect-Here-s-a-detailed-prompt-for-Replit-Agent-Repli_1764702283678.txt  Pasted-Perfect-question-Since-you-re-deploying-to-Vercel-which_1764782756742.txt
backend/: main.py
frontend/: README.md  next.config.mjs  package-lock.json  (+2 more)
(+276 files in other folders)
